[package]
name = "migo-hqm-server"
version = "1.8.0"
authors = ["John Eriksson <john.eriksson.16@gmail.com>"]
edition = "2021"

[dependencies]

nalgebra = "0.32"
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "sync", "fs", "parking_lot"] }
rust-ini = "0.18" # INI For configuration
bytes = "1.4"
reqwest = { version = "0.11", default_features=false, features = ["multipart", "rustls-tls"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3", features = ["parking_lot"]}
tracing-appender = "0.2"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
smallvec = { version = "1.11", features = ["union", "const_generics"]}
systemctl = "0.1.9"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
