[package]
name = "migo-hqm-server"
version = "2.0.2"
authors = ["John Eriksson <john.eriksson.16@gmail.com>"]
edition = "2021"
build = "src/build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "0.32"
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "sync", "fs", "parking_lot"] }
rust-ini = "0.21.0" # INI For configuration
bytes = "1.6"
reqwest = { version = "0.12", default-features=false, features = ["multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["parking_lot"]}
tracing-appender = "0.2"
chrono = "0.4"
arrayvec = "0.7.4"
smallvec = { version = "1.11", features = ["union", "const_generics"]}
systemctl = "0.3.1"
futures = "0.3"
async-stream = { version = "0.3.5", features = [] }
itertools = "0.13.0"
parking_lot = "0.12.2"
tokio-stream = "0.1.15"
notify-debouncer-full = "0.3.1"
reborrow = { version="0.5.5", features=["derive"] }
anyhow = "1"
arraydeque = "0.5"
cached = "0.51"

[build-dependencies]
vergen-git2 = { version = "1.0.0-beta.2", features = [] }
anyhow = "1"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
strip = true
